--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <ul>
         <li><a href="#">Home</a></li> &nbsp;
-        <li><a href="#">Portfolio </a></li> &nbsp;
+        <li><a href="#">Courses </a></li> &nbsp;
         <li><a href="#">Contact</a></li> &nbsp;
-        <li><a href="#">Blog</a></li> &nbsp;
+        <li><a href="#">Blogs</a></li> &nbsp;
 </ul>
     
 
@@ -44,7 +44,7 @@
 <div class="div3">
         <div class="indiv1">
             <img class="img2" src="Image/187-1878805_circle-vector-pen-transparent-background-edited-icon-hd.png" height="40px" width="40px">
-            <h1 class="ha1">Easy to edit</h1>
+            <h1 class="ha1">Easy to edited</h1>
             <p>Lorem ipsum dolor sit amet  elit <br>Nemo laborum nesciunt perferendis <br> qui sunt soluta laudantium vel rem</p>
         </div>
 
